name:                linklater-examples
version:             4.0.0.0
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable jpegbot
  hs-source-dirs:      app
  main-is:             JointPhotographicExpertsGroupTonga.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       HTTP
                     , aeson
                     , array
                     , attoparsec
                     , base < 5
                     , base-prelude
                     , bytestring
                     , lens
                     , linklater
                     , mtl
                     , random
                     , random-shuffle
                     , text
                     , warp
                     , wreq
                     -- a misnomer, as this actually searches Google Images
                     , jpg-to
  default-language:    Haskell2010
