name:                linklater-examples
version:             4.0.0.0
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable streambot
  hs-source-dirs:      app
  main-is:             Stream.hs
  other-modules:       HTTP
                     , Live
                     , Toys.Hi5
                     , Toys.SummonPainting
                     , Types
                     , Types
                     , Utils
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       HTTP
                     , aeson
                     , base < 5
                     , base-prelude
                     , bytestring
                     , jpg-to
                     , lens
                     , lens-aeson
                     , linklater
                     , mtl
                     , network
                     , pcre-heavy
                     , random-shuffle
                     , text
                     , th-printf
                     , uri-bytestring
                     , warp
                     , websockets
                     , wreq
                     , wuss
  default-language:    Haskell2010
